# code_contests

./: .bazelrc  .gitignore  BUILD  README.md  WORKSPACE  contest_problem.proto  convert_riegeli_to_json.py  load_data_test.cc  make_python_bindings.sh  print_names.cc  print_names_and_sources.py
.github/workflows/: codacy.yml
execution/: BUILD.bazel  py_locations.cc  py_locations.h  py_tester_sandboxer.cc  py_tester_sandboxer.h  simple_threadpool.h  solve_example.cc  status_macros.h  status_matchers.h  temp_path.h  test_python_binding.py  tester_sandboxer.cc  tester_sandboxer.h  tester_sandboxer_test.cc
execution/py_bindings/code_contests_tester/: __init__.py
execution/py_tester_bindings/: BUILD.bazel  README.md  make_python_bindings.sh  py_tester_sandboxer_bindings.cc  setup.py  test_python_binding.py
